parser/lab1-test-dir/ParCpp.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.10 from ParCpp.y
-----------------------------------------------------------------------------

state 45 contains 1 shift/reduce conflicts.
state 224 contains 1 shift/reduce conflicts.

terminal L_err is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pListArg -> ListArg                         (3)
	%start_pListStm -> ListStm                         (4)
	%start_pArg -> Arg                                 (5)
	%start_pStm -> Stm                                 (6)
	%start_pExp16 -> Exp16                             (7)
	%start_pExp15 -> Exp15                             (8)
	%start_pExp14 -> Exp14                             (9)
	%start_pExp13 -> Exp13                             (10)
	%start_pExp12 -> Exp12                             (11)
	%start_pExp11 -> Exp11                             (12)
	%start_pExp10 -> Exp10                             (13)
	%start_pExp9 -> Exp9                               (14)
	%start_pExp8 -> Exp8                               (15)
	%start_pExp4 -> Exp4                               (16)
	%start_pExp3 -> Exp3                               (17)
	%start_pExp2 -> Exp2                               (18)
	%start_pExp1 -> Exp1                               (19)
	%start_pExp -> Exp                                 (20)
	%start_pExp5 -> Exp5                               (21)
	%start_pExp6 -> Exp6                               (22)
	%start_pExp7 -> Exp7                               (23)
	%start_pExp17 -> Exp17                             (24)
	%start_pListExp -> ListExp                         (25)
	%start_pType -> Type                               (26)
	%start_pListType -> ListType                       (27)
	%start_pListId -> ListId                           (28)
	Integer -> L_integ                                 (29)
	Double -> L_doubl                                  (30)
	String -> L_quoted                                 (31)
	Id -> L_Id                                         (32)
	Program -> ListDef                                 (33)
	ListDef ->                                         (34)
	ListDef -> ListDef Def                             (35)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (36)
	ListArg ->                                         (37)
	ListArg -> Arg                                     (38)
	ListArg -> Arg ',' ListArg                         (39)
	ListStm ->                                         (40)
	ListStm -> ListStm Stm                             (41)
	Arg -> Type Id                                     (42)
	Stm -> Exp ';'                                     (43)
	Stm -> Type Id ';'                                 (44)
	Stm -> Type Id ',' ListId ';'                      (45)
	Stm -> Type Id '=' Exp ';'                         (46)
	Stm -> 'return' Exp ';'                            (47)
	Stm -> 'return' ';'                                (48)
	Stm -> 'while' '(' Exp ')' Stm                     (49)
	Stm -> 'do' Stm ';' 'while' '(' Exp ')'            (50)
	Stm -> '{' ListStm '}'                             (51)
	Stm -> 'if' '(' Exp ')' Stm                        (52)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (53)
	Stm -> 'for' '(' Exp ';' Exp ';' Exp ')' Stm       (54)
	Stm -> 'typedef' Exp Id                            (55)
	Stm -> 'struct' Id '{' ListStm '}' ';'             (56)
	Exp16 -> Integer                                   (57)
	Exp16 -> Double                                    (58)
	Exp16 -> String                                    (59)
	Exp16 -> 'true'                                    (60)
	Exp16 -> 'false'                                   (61)
	Exp16 -> Id                                        (62)
	Exp16 -> Exp17                                     (63)
	Exp16 -> Id '<' ListType '>'                       (64)
	Exp16 -> Exp17 '::' Exp17                          (65)
	Exp15 -> Id '(' ListExp ')'                        (66)
	Exp15 -> Id '[' Exp ']'                            (67)
	Exp15 -> Exp16                                     (68)
	Exp14 -> Exp15 '++'                                (69)
	Exp14 -> Exp15 '--'                                (70)
	Exp14 -> Exp15 '.' Exp14                           (71)
	Exp14 -> Exp15 '->' Exp14                          (72)
	Exp14 -> Exp15                                     (73)
	Exp13 -> '++' Exp14                                (74)
	Exp13 -> '--' Exp14                                (75)
	Exp13 -> '!' Exp14                                 (76)
	Exp13 -> Exp14                                     (77)
	Exp12 -> Exp12 '*' Exp13                           (78)
	Exp12 -> Exp12 '/' Exp13                           (79)
	Exp12 -> Exp12 '%' Exp13                           (80)
	Exp12 -> Exp13                                     (81)
	Exp11 -> Exp11 '+' Exp12                           (82)
	Exp11 -> Exp11 '-' Exp12                           (83)
	Exp11 -> Exp12                                     (84)
	Exp10 -> Exp10 '<<' Exp11                          (85)
	Exp10 -> Exp10 '>>' Exp11                          (86)
	Exp10 -> Exp11                                     (87)
	Exp9 -> Exp10 '<' Exp10                            (88)
	Exp9 -> Exp10 '>' Exp10                            (89)
	Exp9 -> Exp10 '<=' Exp10                           (90)
	Exp9 -> Exp10 '>=' Exp10                           (91)
	Exp9 -> Exp10                                      (92)
	Exp8 -> Exp9 '==' Exp9                             (93)
	Exp8 -> Exp9 '!=' Exp9                             (94)
	Exp8 -> Exp9                                       (95)
	Exp4 -> Exp4 '&&' Exp5                             (96)
	Exp4 -> Exp5                                       (97)
	Exp3 -> Exp3 '||' Exp4                             (98)
	Exp3 -> Exp4                                       (99)
	Exp2 -> Exp3 '=' Exp2                              (100)
	Exp2 -> Exp3 '+=' Exp2                             (101)
	Exp2 -> Exp3 '-=' Exp2                             (102)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (103)
	Exp2 -> Exp3                                       (104)
	Exp1 -> 'throw' Exp2                               (105)
	Exp1 -> Exp2                                       (106)
	Exp -> Exp1                                        (107)
	Exp5 -> Exp6                                       (108)
	Exp6 -> Exp7                                       (109)
	Exp7 -> Exp8                                       (110)
	Exp17 -> '(' Exp ')'                               (111)
	ListExp ->                                         (112)
	ListExp -> Exp                                     (113)
	ListExp -> Exp ',' ListExp                         (114)
	Type -> 'bool'                                     (115)
	Type -> 'int'                                      (116)
	Type -> 'double'                                   (117)
	Type -> 'void'                                     (118)
	Type -> 'string'                                   (119)
	ListType -> Type                                   (120)
	ListType -> Type ',' ListType                      (121)
	ListId -> Id                                       (122)
	ListId -> Id ',' ListId                            (123)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&&'           { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	'++'           { PT _ (TS _ 9) }
	'+='           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'-='           { PT _ (TS _ 14) }
	'->'           { PT _ (TS _ 15) }
	'.'            { PT _ (TS _ 16) }
	'/'            { PT _ (TS _ 17) }
	':'            { PT _ (TS _ 18) }
	'::'           { PT _ (TS _ 19) }
	';'            { PT _ (TS _ 20) }
	'<'            { PT _ (TS _ 21) }
	'<<'           { PT _ (TS _ 22) }
	'<='           { PT _ (TS _ 23) }
	'='            { PT _ (TS _ 24) }
	'=='           { PT _ (TS _ 25) }
	'>'            { PT _ (TS _ 26) }
	'>='           { PT _ (TS _ 27) }
	'>>'           { PT _ (TS _ 28) }
	'?'            { PT _ (TS _ 29) }
	'['            { PT _ (TS _ 30) }
	']'            { PT _ (TS _ 31) }
	'bool'         { PT _ (TS _ 32) }
	'do'           { PT _ (TS _ 33) }
	'double'       { PT _ (TS _ 34) }
	'else'         { PT _ (TS _ 35) }
	'false'        { PT _ (TS _ 36) }
	'for'          { PT _ (TS _ 37) }
	'if'           { PT _ (TS _ 38) }
	'int'          { PT _ (TS _ 39) }
	'return'       { PT _ (TS _ 40) }
	'string'       { PT _ (TS _ 41) }
	'struct'       { PT _ (TS _ 42) }
	'throw'        { PT _ (TS _ 43) }
	'true'         { PT _ (TS _ 44) }
	'typedef'      { PT _ (TS _ 45) }
	'void'         { PT _ (TS _ 46) }
	'while'        { PT _ (TS _ 47) }
	'{'            { PT _ (TS _ 48) }
	'||'           { PT _ (TS _ 49) }
	'}'            { PT _ (TS _ 50) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id _) }
	L_err          { _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pListArg rule  3
	%start_pListStm rule  4
	%start_pArg     rule  5
	%start_pStm     rule  6
	%start_pExp16   rule  7
	%start_pExp15   rule  8
	%start_pExp14   rule  9
	%start_pExp13   rule  10
	%start_pExp12   rule  11
	%start_pExp11   rule  12
	%start_pExp10   rule  13
	%start_pExp9    rule  14
	%start_pExp8    rule  15
	%start_pExp4    rule  16
	%start_pExp3    rule  17
	%start_pExp2    rule  18
	%start_pExp1    rule  19
	%start_pExp     rule  20
	%start_pExp5    rule  21
	%start_pExp6    rule  22
	%start_pExp7    rule  23
	%start_pExp17   rule  24
	%start_pListExp rule  25
	%start_pType    rule  26
	%start_pListType rule  27
	%start_pListId  rule  28
	Integer         rule  29
	Double          rule  30
	String          rule  31
	Id              rule  32
	Program         rule  33
	ListDef         rules 34, 35
	Def             rule  36
	ListArg         rules 37, 38, 39
	ListStm         rules 40, 41
	Arg             rule  42
	Stm             rules 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56
	Exp16           rules 57, 58, 59, 60, 61, 62, 63, 64, 65
	Exp15           rules 66, 67, 68
	Exp14           rules 69, 70, 71, 72, 73
	Exp13           rules 74, 75, 76, 77
	Exp12           rules 78, 79, 80, 81
	Exp11           rules 82, 83, 84
	Exp10           rules 85, 86, 87
	Exp9            rules 88, 89, 90, 91, 92
	Exp8            rules 93, 94, 95
	Exp4            rules 96, 97
	Exp3            rules 98, 99
	Exp2            rules 100, 101, 102, 103, 104
	Exp1            rules 105, 106
	Exp             rule  107
	Exp5            rule  108
	Exp6            rule  109
	Exp7            rule  110
	Exp17           rule  111
	ListExp         rules 112, 113, 114
	Type            rules 115, 116, 117, 118, 119
	ListType        rules 120, 121
	ListId          rules 122, 123

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 34
	'double'       reduce using rule 34
	'int'          reduce using rule 34
	'string'       reduce using rule 34
	'void'         reduce using rule 34
	%eof           reduce using rule 34

	Program        goto state 112
	ListDef        goto state 113

State 1


	'bool'         reduce using rule 34
	'double'       reduce using rule 34
	'int'          reduce using rule 34
	'string'       reduce using rule 34
	'void'         reduce using rule 34
	%eof           reduce using rule 34

	ListDef        goto state 111

State 2


	'bool'         shift, and enter state 36
	'double'       shift, and enter state 37
	'int'          shift, and enter state 38
	'string'       shift, and enter state 39
	'void'         shift, and enter state 40

	Def            goto state 109
	Type           goto state 110

State 3


	'bool'         shift, and enter state 36
	'double'       shift, and enter state 37
	'int'          shift, and enter state 38
	'string'       shift, and enter state 39
	'void'         shift, and enter state 40
	%eof           reduce using rule 37

	ListArg        goto state 107
	Arg            goto state 108
	Type           goto state 105

State 4


	'!'            reduce using rule 40
	'('            reduce using rule 40
	'++'           reduce using rule 40
	'--'           reduce using rule 40
	'bool'         reduce using rule 40
	'do'           reduce using rule 40
	'double'       reduce using rule 40
	'false'        reduce using rule 40
	'for'          reduce using rule 40
	'if'           reduce using rule 40
	'int'          reduce using rule 40
	'return'       reduce using rule 40
	'string'       reduce using rule 40
	'struct'       reduce using rule 40
	'throw'        reduce using rule 40
	'true'         reduce using rule 40
	'typedef'      reduce using rule 40
	'void'         reduce using rule 40
	'while'        reduce using rule 40
	'{'            reduce using rule 40
	L_integ        reduce using rule 40
	L_doubl        reduce using rule 40
	L_quoted       reduce using rule 40
	L_Id           reduce using rule 40
	%eof           reduce using rule 40

	ListStm        goto state 106

State 5


	'bool'         shift, and enter state 36
	'double'       shift, and enter state 37
	'int'          shift, and enter state 38
	'string'       shift, and enter state 39
	'void'         shift, and enter state 40

	Arg            goto state 104
	Type           goto state 105

State 6


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'bool'         shift, and enter state 36
	'do'           shift, and enter state 96
	'double'       shift, and enter state 37
	'false'        shift, and enter state 69
	'for'          shift, and enter state 97
	'if'           shift, and enter state 98
	'int'          shift, and enter state 38
	'return'       shift, and enter state 99
	'string'       shift, and enter state 39
	'struct'       shift, and enter state 100
	'throw'        shift, and enter state 70
	'true'         shift, and enter state 71
	'typedef'      shift, and enter state 101
	'void'         shift, and enter state 40
	'while'        shift, and enter state 102
	'{'            shift, and enter state 103
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Stm            goto state 93
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp2           goto state 57
	Exp1           goto state 58
	Exp            goto state 94
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63
	Type           goto state 95

State 7


	'('            shift, and enter state 66
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 91
	Exp16          goto state 92
	Exp17          goto state 63

State 8


	'('            shift, and enter state 66
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 90
	Exp17          goto state 63

State 9


	'('            shift, and enter state 66
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 89
	Exp17          goto state 63

State 10


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 88
	Exp17          goto state 63

State 11


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 87
	Exp17          goto state 63

State 12


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 86
	Exp17          goto state 63

State 13


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 85
	Exp17          goto state 63

State 14


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 84
	Exp17          goto state 63

State 15


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 83
	Exp17          goto state 63

State 16


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 82
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63

State 17


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 81
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63

State 18


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp2           goto state 80
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63

State 19


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'throw'        shift, and enter state 70
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp2           goto state 57
	Exp1           goto state 79
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63

State 20


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'throw'        shift, and enter state 70
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp2           goto state 57
	Exp1           goto state 58
	Exp            goto state 78
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63

State 21


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp5           goto state 77
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63

State 22


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp6           goto state 76
	Exp7           goto state 62
	Exp17          goto state 63

State 23


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp7           goto state 75
	Exp17          goto state 63

State 24


	'('            shift, and enter state 66

	Exp17          goto state 74

State 25


	'!'            shift, and enter state 65
	'('            shift, and enter state 66
	'++'           shift, and enter state 67
	'--'           shift, and enter state 68
	'false'        shift, and enter state 69
	'throw'        shift, and enter state 70
	'true'         shift, and enter state 71
	L_integ        shift, and enter state 30
	L_doubl        shift, and enter state 72
	L_quoted       shift, and enter state 73
	L_Id           shift, and enter state 33
	%eof           reduce using rule 112

	Integer        goto state 42
	Double         goto state 43
	String         goto state 44
	Id             goto state 45
	Exp16          goto state 46
	Exp15          goto state 47
	Exp14          goto state 48
	Exp13          goto state 49
	Exp12          goto state 50
	Exp11          goto state 51
	Exp10          goto state 52
	Exp9           goto state 53
	Exp8           goto state 54
	Exp4           goto state 55
	Exp3           goto state 56
	Exp2           goto state 57
	Exp1           goto state 58
	Exp            goto state 59
	Exp5           goto state 60
	Exp6           goto state 61
	Exp7           goto state 62
	Exp17          goto state 63
	ListExp        goto state 64

State 26


	'bool'         shift, and enter state 36
	'double'       shift, and enter state 37
	'int'          shift, and enter state 38
	'string'       shift, and enter state 39
	'void'         shift, and enter state 40

	Type           goto state 41

State 27


	'bool'         shift, and enter state 36
	'double'       shift, and enter state 37
	'int'          shift, and enter state 38
	'string'       shift, and enter state 39
	'void'         shift, and enter state 40

	Type           goto state 34
	ListType       goto state 35

State 28


	L_Id           shift, and enter state 33

	Id             goto state 31
	ListId         goto state 32

State 29


	L_integ        shift, and enter state 30


State 30

	Integer -> L_integ .                                (rule 29)

	'!='           reduce using rule 29
	'%'            reduce using rule 29
	'&&'           reduce using rule 29
	')'            reduce using rule 29
	'*'            reduce using rule 29
	'+'            reduce using rule 29
	'++'           reduce using rule 29
	'+='           reduce using rule 29
	','            reduce using rule 29
	'-'            reduce using rule 29
	'--'           reduce using rule 29
	'-='           reduce using rule 29
	'->'           reduce using rule 29
	'.'            reduce using rule 29
	'/'            reduce using rule 29
	':'            reduce using rule 29
	';'            reduce using rule 29
	'<'            reduce using rule 29
	'<<'           reduce using rule 29
	'<='           reduce using rule 29
	'='            reduce using rule 29
	'=='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'>>'           reduce using rule 29
	'?'            reduce using rule 29
	']'            reduce using rule 29
	'||'           reduce using rule 29
	L_Id           reduce using rule 29
	%eof           reduce using rule 29


State 31

	ListId -> Id .                                      (rule 122)
	ListId -> Id . ',' ListId                           (rule 123)

	','            shift, and enter state 164
	';'            reduce using rule 122
	%eof           reduce using rule 122


State 32

	%start_pListId -> ListId .                          (rule 28)

	%eof           accept


State 33

	Id -> L_Id .                                        (rule 32)

	'!'            reduce using rule 32
	'!='           reduce using rule 32
	'%'            reduce using rule 32
	'&&'           reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'*'            reduce using rule 32
	'+'            reduce using rule 32
	'++'           reduce using rule 32
	'+='           reduce using rule 32
	','            reduce using rule 32
	'-'            reduce using rule 32
	'--'           reduce using rule 32
	'-='           reduce using rule 32
	'->'           reduce using rule 32
	'.'            reduce using rule 32
	'/'            reduce using rule 32
	':'            reduce using rule 32
	';'            reduce using rule 32
	'<'            reduce using rule 32
	'<<'           reduce using rule 32
	'<='           reduce using rule 32
	'='            reduce using rule 32
	'=='           reduce using rule 32
	'>'            reduce using rule 32
	'>='           reduce using rule 32
	'>>'           reduce using rule 32
	'?'            reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	'bool'         reduce using rule 32
	'do'           reduce using rule 32
	'double'       reduce using rule 32
	'else'         reduce using rule 32
	'false'        reduce using rule 32
	'for'          reduce using rule 32
	'if'           reduce using rule 32
	'int'          reduce using rule 32
	'return'       reduce using rule 32
	'string'       reduce using rule 32
	'struct'       reduce using rule 32
	'throw'        reduce using rule 32
	'true'         reduce using rule 32
	'typedef'      reduce using rule 32
	'void'         reduce using rule 32
	'while'        reduce using rule 32
	'{'            reduce using rule 32
	'||'           reduce using rule 32
	'}'            reduce using rule 32
	L_integ        reduce using rule 32
	L_doubl        reduce using rule 32
	L_quoted       reduce using rule 32
	L_Id           reduce using rule 32
	%eof           reduce using rule 32


State 34

	ListType -> Type .                                  (rule 120)
	ListType -> Type . ',' ListType                     (rule 121)

	','            shift, and enter state 163
	'>'            reduce using rule 120
	%eof           reduce using rule 120


State 35

	%start_pListType -> ListType .                      (rule 27)

	%eof           accept


State 36

	Type -> 'bool' .                                    (rule 115)

	','            reduce using rule 115
	'>'            reduce using rule 115
	L_Id           reduce using rule 115
	%eof           reduce using rule 115


State 37

	Type -> 'double' .                                  (rule 117)

	','            reduce using rule 117
	'>'            reduce using rule 117
	L_Id           reduce using rule 117
	%eof           reduce using rule 117


State 38

	Type -> 'int' .                                     (rule 116)

	','            reduce using rule 116
	'>'            reduce using rule 116
	L_Id           reduce using rule 116
	%eof           reduce using rule 116


State 39

	Type -> 'string' .                                  (rule 119)

	','            reduce using rule 119
	'>'            reduce using rule 119
	L_Id           reduce using rule 119
	%eof           reduce using rule 119


State 40

	Type -> 'void' .                                    (rule 118)

	','            reduce using rule 118
	'>'            reduce using rule 118
	L_Id           reduce using rule 118
	%eof           reduce using rule 118


State 41

	%start_pType -> Type .                              (rule 26)

	%eof           accept


State 42

	Exp16 -> Integer .                                  (rule 57)
